DevOps/src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CM_External_SF_ID__c</fullName>
        <externalId>true</externalId>
        <label>CM External SF ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Campaign External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_SF_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact SF External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_SF_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead SF External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>